@@ -1,3 +1,9 @@
+2006-01-08  Marco Barisione  <barisione@gmail.com>
+
+	* gtksourceview/gtksourcelanguage-private.h,
+	gtksourceview/gtksourcelanguage.c: fixes gcc 4.01 compiler warnings on
+	different signedness (bug #309663)
+
 2006-01-08  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>
 
 	* gtksourceview/gtktextregion.c: (gtk_text_region_add),
